--- a/system/system-impl/src/main/resources/application.yml
+++ b/system/system-impl/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 
 spring:
-  profiles:
-    active: @profiles.active@
   application:
     name: system
+  jpa:
+    open-in-view: false
