--- a/system/system-client-api/pom.xml
+++ b/system/system-client-api/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>system-client-api</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
