--- a/system/system-api/pom.xml
+++ b/system/system-api/pom.xml
@@ -19,10 +19,18 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>cn.yangxy.cloud</groupId>
+            <artifactId>commons</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
     </dependencies>
 
 </project>
